--- a/backend/user-service/src/main/resources/application.properties
+++ b/backend/user-service/src/main/resources/application.properties
@@ -21,9 +21,9 @@ spring.jpa.show-sql=false
 spring.datasource.url=jdbc:h2:mem:userserdb
 
 #logging.level.org.springframework.context=DEBUG
-spring.profiles.active=dev
-spring.cloud.config.profile=dev
-spring.data.rest.basePath=/api
+#spring.profiles.active=dev
+#spring.cloud.config.profile=dev
+#spring.data.rest.basePath=/api
 
 #spring.security.oauth2.resourceserver.jwt.issuer-uri=http\://localhost\:8085/reals/sm-realm
 #spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http\://localhost\:8080/realms/sm-realm/protocol/openid-connect/certs
